[package]
name = "lightning-client"
version = "0.1.0"
description = "A Rust implementation of the Lightning Network Protocol"
edition = "2021"

[dependencies]
chacha20poly1305 = "0.10.0"
clap = { version = "4.5.4", features = ["derive"] }
color-eyre = "0.6.3"
digest = "0.10.7"
hex = "0.4.3"
hex-literal = "0.3"
hkdf = "0.12.4"
hmac = "0.12.1"
poly1305 = "0.8.0"
secp256k1 = { version = "0.29.0", features = ["global-context", "rand-std"] }
sha2 = "0.10.8"
thiserror = "1.0.58"
tokio = { version = "1.31.0", features= ["full"] }
